syntax = "proto3";
package util;

message Transaction {
  string hash = 1;
  string nonce = 2;
  string blockHash = 3;
  string blockNumber = 4;
  string transactionIndex = 5;
  string from = 6;
  optional string to = 7;
  string value = 8;
  string gasPrice = 9;
  string gas = 10;
  string data = 11;
  string input = 12;
  string type = 13;
  string v = 14;
  string s = 15;
  string r = 16;
}

message Block {
  string author = 1;
  string difficulty = 2;
  string extraData = 3;
  string gasLimit = 4;
  string gasUsed = 5;
  string hash = 6;
  string logsBloom = 7;
  string miner = 8;
  string number = 9;
  string parentHash = 10;
  string receiptsRoot = 11;
  string sha3Uncles = 12;
  string signature = 13;
  string size = 14;
  string stateRoot = 15;
  uint32 step = 16;
  string totalDifficulty = 17;
  string timestamp = 18;
  repeated Transaction transactions = 19;
  string transactionsRoot = 20;
  repeated string uncles = 21;
  string baseFeePerGas = 22;
  string mixHash = 23;
}
